--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.rbc
+.ruby-version
 *.sassc
 .project
 .sass-cache
@@ -17,6 +18,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 /config/database.yml
+/dummy/.bundle/
 /dummy/config/database.yml
 /dummy/db/structure.sql
 /dummy/spec/tmp/*
