--- a/dummy/Gemfile
+++ b/dummy/Gemfile
@@ -1,7 +1,9 @@
-source "http://gems.github.com"
-source "http://rubygems.org"
+source 'http://gems.github.com'
+source 'http://rubygems.org'
 
-gemspec path: File.expand_path(File.dirname(__FILE__) + "/../")
+gemspec path: File.expand_path(File.dirname(__FILE__) + '/../')
+
+gem 'voluntary', path: '../../voluntary'
 
 # core
 gem 'rack-cors', '~> 0.2.4', require: 'rack/cors'
@@ -12,8 +14,8 @@ gem 'settingslogic', git: 'https://github.com/binarylogic/settingslogic.git'
 
 # view 
 gem 'acts_as_markup', git: 'git://github.com/vigetlabs/acts_as_markup.git'
-gem 'auto_html', git: 'git://github.com/Applicat/auto_html'
 gem 'recaptcha', require: 'recaptcha/rails'
+gem 'will_paginate', github: 'mislav/will_paginate'
 
 # queue
 
@@ -35,9 +37,6 @@ gem 'jasmine', git: 'https://github.com/pivotal/jasmine-gem.git'
 group :development do
   gem 'mysql2', '~> 0.3.13'
   gem 'linecache', '0.46', platforms: :mri_18
-  gem 'capistrano', '~> 2.15.5', require: false
-  gem 'capistrano_colors', '~> 0.5.5', require: false
-  gem 'capistrano-ext', '~> 1.2.1', require: false
   gem 'yard', '~> 0.7', require: false
 end
 
@@ -57,15 +56,3 @@ gem 'therubyracer', '~> 0.12.0', platforms: :ruby
 
 # asset_sync is required as needed by application.rb
 gem 'asset_sync', '~> 0.5.0', require: nil
-
-group :production do
-  # dependency nokogiri is incompatible with cucumber-rails
-  #  gem 'rails_admin', git: 'git://github.com/halida/rails_admin.git'
-  gem 'fastercsv', '~> 1.5.5', require: false
-  gem 'rack-ssl', '~> 1.3.3', require: 'rack/ssl'
-  gem 'rack-rewrite', '~> 1.2.1', require: false
-  
-  # analytics
-  gem 'rack-google-analytics', '~> 0.11.0', require: 'rack/google-analytics'
-  gem 'rack-piwik', '~> 0.1.3', require: 'rack/piwik', require: false
-end
