--- a/dummy/Gemfile
+++ b/dummy/Gemfile
@@ -3,7 +3,7 @@ source 'http://rubygems.org'
 
 gemspec path: File.expand_path(File.dirname(__FILE__) + '/../')
 
-gem 'voluntary', path: '../../voluntary'
+gem 'voluntary', github: 'volontariat/voluntary', branch: 'rails_4.2.1' #path: '../../voluntary'
 
 # core
 gem 'rack-cors', '~> 0.2.4', require: 'rack/cors'
@@ -15,7 +15,6 @@ gem 'settingslogic', git: 'https://github.com/binarylogic/settingslogic.git'
 # view 
 gem 'acts_as_markup', git: 'git://github.com/vigetlabs/acts_as_markup.git'
 gem 'recaptcha', require: 'recaptcha/rails'
-gem 'will_paginate', github: 'mislav/will_paginate'
 
 # queue
 
@@ -29,11 +28,6 @@ gem 'addressable', '~> 2.2', require: 'addressable/uri'
 
 gem 'jasmine', git: 'https://github.com/pivotal/jasmine-gem.git'
 
-# misc
-
-# invalid byte sequence in US-ASCII on production
-#  gem 'markerb', git: 'https://github.com/plataformatec/markerb.git'
-
 group :development do
   gem 'mysql2', '~> 0.3.13'
   gem 'linecache', '0.46', platforms: :mri_18
@@ -41,18 +35,20 @@ group :development do
 end
 
 group :test do
-  gem 'cucumber-rails', '~> 1.3.0', require: false
+  gem 'cucumber', '~> 1.3.18'
+  gem 'cucumber-rails', '~> 1.4.0', require: false
   gem 'rspec-instafail', '~> 0.2.4', require: false
   gem 'webmock', '~> 1.8.11', require: false
   gem 'simplecov', '~> 0.7.1', require: false
 end
 
+group :test, :cucumber do
+  gem 'codeclimate-test-reporter', require: nil
+end
+
 group :development, :test do
-  gem 'debugger', platforms: :mri_19
-  gem 'ruby-debug', '~> 0.10.4', platforms: :mri_18
+  gem 'pry-byebug', '~> 3.1.0'
+  gem 'spring'
 end
 
 gem 'therubyracer', '~> 0.12.0', platforms: :ruby
-
-# asset_sync is required as needed by application.rb
-gem 'asset_sync', '~> 0.5.0', require: nil
