--- a/dummy/Gemfile
+++ b/dummy/Gemfile
@@ -1,9 +1,8 @@
-source 'http://gems.github.com'
-source 'http://rubygems.org'
+source 'https://rubygems.org'
 
 gemspec path: File.expand_path(File.dirname(__FILE__) + '/../')
 
-gem 'voluntary', github: 'volontariat/voluntary', branch: 'rails_4.2.1' #path: '../../voluntary'
+gem 'voluntary', github: 'volontariat/voluntary'
 
 # core
 gem 'rack-cors', '~> 0.2.4', require: 'rack/cors'
